Resolved css issue with stripe card errors messages not showing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -708,6 +708,10 @@ textarea.form-control {
   background-color: rgba(220,53,69,.9);
   border-radius: 0
 }
+.invalid-details {
+  font-size: 14px;
+  color: #fd5c63
+}
 .custom-select.is-invalid,
 .form-control.is-invalid,
 .was-validated .custom-select:invalid,
